Boyscouting (#558)
* Boyscouting: Docker conventions

* Boyscouting: JUnit 5 conventions ("It is generally recommended to omit the public modifier for test classes, test methods, and lifecycle methods unless there is a technical reason for doing so)"

* Boyscouting: typo in RepositoryValidationInterceptorFactoryDstu3

* Boyscouting: use List.of instead of Guava; use StandardCharsets instead of Guava; remove unused imports

---------

Co-authored-by: Gerlach, Winfried <Winfried.Gerlach@draeger.com>